# mandelbrot-explorer-rs

./: Cargo.toml  Makefile  index.html
src/: computer.rs  draw.wgsl  framework.rs  main.rs  math.rs  renderer.rs
src/shaders/: mandelbrot.wgsl  render.wgsl
